# zarr-obstore-performance

./: .gitignore  Dockerfile  README.md  generate-store.ipynb  plot-perf-tests.py  plot-xarray-open-perf-tests.py  plot-xarray-perf-tests.py  plot-xarray-query-perf-tests.py  plot-zarr-perf-tests.py  pre-commit-config.yaml  pyproject.toml  run-perf-tests.sh  run-xarray-open-perf-tests.sh  run-xarray-perf-tests.sh  run-xarray-query-perf-tests.sh  run-zarr-perf-tests.sh  test-zarr-fsspec-s3-store.ipynb  test-zarr-local-store.ipynb  test-zarr-memory-store.ipynb  test-zarr-obstore-local-store.ipynb  test-zarr-obstore-memory-store.ipynb  test-zarr-obstore-s3-store.ipynb  timings.csv  utils.py  xarray-fsspec-gcs.py  xarray-obstore-gcs.py  xarray-timings.csv  zarr-fsspec-s3store.py  zarr-obstore-s3store.py
notebooks/: generate-store.ipynb  xarray-fsspec-gcsstore.ipynb  xarray-obstore-gcsstore.ipynb  xarray-obstore-s3store.ipynb  zarr-fsspec-s3store.ipynb  zarr-localstore.ipynb  zarr-memorystore.ipynb  zarr-obstore-localstore.ipynb  zarr-obstore-memorystore.ipynb  zarr-obstore-s3store.ipynb  zarr-obstore-write.ipynb
results/: timings.csv  xarray-open-timings.csv  xarray-query-timings.csv
scripts/: utils.py  xarray-open-fsspec-gcs.py  xarray-open-obstore-gcs.py  xarray-query-fsspec-gcs.py  xarray-query-obstore-gcs.py  zarr-fsspec-s3store.py  zarr-obstore-s3store.py
src/zarr_obstore_performance/: __about__.py  __init__.py
tests/: test_import.py
