[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zarr-obstore-performance"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Max Jones", email = "14077947+maxrjones@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    'xarray',
    'ipykernel',
    'pytest',
]

[project.urls]
Documentation = "https://github.com/maxrjones/zarr-obstore-performance#readme"
Issues = "https://github.com/maxrjones/zarr-obstore-performance/issues"
Source = "https://github.com/maxrjones/zarr-obstore-performance"

[tool.hatch.version]
path = "src/zarr_obstore_performance/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/zarr_obstore_performance tests}"

[tool.coverage.run]
source_pkgs = ["zarr_obstore_performance", "tests"]
branch = true
parallel = true
omit = [
  "src/zarr_obstore_performance/__about__.py",
]

[tool.hatch.envs.obstore]
python = "3.13"
dependencies = [
    'zarr[optional,remote,test] @ git+https://github.com/maxrjones/zarr-python@1b9f9f2d52d6ebceebde87ecf97810826219b88c',
]

[tool.hatch.envs.analysis]
python = "3.13"
dependencies = [
    'matplotlib',
    'scipy',
    'papermill',
]

[tool.coverage.paths]
zarr_obstore_performance = ["src/zarr_obstore_performance", "*/zarr-obstore-performance/src/zarr_obstore_performance"]
tests = ["tests", "*/zarr-obstore-performance/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
